--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,4 +6,7 @@
 <%= link_to "delete", article_path(@article), data: {confirm: "Really delete the article?"}, method: :delete %>
 <br>
 <br>
+<h3>Comments</h3>
+<%= render partial: 'articles/comment', collection: @article.comments %>
+<%= render partial: 'comments/form' %>
 <%= link_to "<< Back to Articles List", articles_path %>
