Added a few gems

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,7 +9,9 @@
 </head>
 <body>
 
-<p class="flash"><%= flash.notice %></p>
+<p class="flash">
+	<%= flash.notice %>
+</p>
 
 <%= yield %>
 
