--- a/app/views/articles/_comment.html.erb
+++ b/app/views/articles/_comment.html.erb
@@ -2,5 +2,7 @@
 	<h4>Comment by <%= comment.author_name %></h4>
 	<p>Posted <%=distance_of_time_in_words(comment.article.created_at, comment.created_at) %> later</p>
 	<p class = "comment"><%= comment.body %></p>
-	<%= link_to "delete comment", article_comment_path(comment.article, comment), method: :delete %>
+	<% if logged_in? %>
+		<%= link_to "delete comment", article_comment_path(comment.article, comment), method: :delete %>
+	<% end %>
 </div>
