--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,6 +5,11 @@
 		<li>
 			<%= link_to article.title, article_path(article) %>
 		</li>
+	<!--	<li>
+			<%= link_to article.author, article_path(article) %>
+		</li> Need this to add author owndership -->
 	<% end %>
 </ul>
-<%= link_to "Create a New Article", new_article_path, class: 'new_article' %>
+<% if logged_in? %>
+	<%= link_to "Create a New Article", new_article_path, class: 'new_article' %>
+<% end %>
