--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -4,9 +4,8 @@
   <thead>
     <tr>
       <th>Email</th>
-      <th>Password</th>
-      <th>Password confirmation</th>
-      <th colspan="3"></th>
+      <th>Username</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -14,6 +13,7 @@
     <% @authors.each do |author| %>
       <tr>
         <td><%= author.email %></td>
+        <td><%= author.username %></td>
         <td><%= author.password %></td>
         <td><%= author.password_confirmation %></td>
         <td><%= link_to 'Show', author %></td>
@@ -27,3 +27,5 @@
 <br>
 
 <%= link_to 'New Author', new_author_path %>
+<br>
+<%= link_to '<<Back to Articles', articles_path %>
