--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,25 @@
 <p class="flash">
 	<%= flash.notice %>
 </p>
-
-<%= yield %>
+<div id="container">
+	<div id="content">
+		<%= yield %>
+		<hr>
+		<h6>
+			<% if logged_in? %>
+				<%= "Logged in as #{current_user.username}" %>
+				<%= link_to "(logout)", logout_path %>
+			<% else %>
+				Logged out
+				<%= link_to "(login)", login_path %>
+			<% end %>
+		</h6>
+		<br>
+		<h7>
+			<%= link_to "Create new user", new_author_path %>
+		</h7>
+	</div>
+</div>
 
 </body>
 </html>
