--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -4,7 +4,9 @@
 	<% @tags.each do |tag| %>
 		<li>
 			<%= link_to tag.name, tag_path(tag) %>  
-			<%= link_to "Delete", tag_path(tag), data: {confirm: "remove all instances of this tag"}, method: :delete %>
+			<% if logged_in? %>
+				<%= link_to "Delete", tag_path(tag), data: {confirm: "remove all instances of this tag"}, method: :delete %>
+			<% end %>
 		</li>
 	<% end %>
 </ul>
