Improved author ownership

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,10 @@
 		<hr>
 		<h6>
 			<% if logged_in? %>
-				<%= "Logged in as #{current_user.username}" %>
-				<%= link_to "(logout)", logout_path %>
+				<p>Logged in as 
+					<%= link_to current_user.username, author_path(current_user) %>
+					<%= link_to "(logout)", logout_path %>
+				</p>
 			<% else %>
 				Logged out
 				<%= link_to "(login)", login_path %>
