--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -19,7 +19,7 @@
 </p>
 <p><%= @article.body %></p>
 <br>
-<% if logged_in? %>
+<% if current_user.id == @article.author_id %>
 	<%= link_to "edit", edit_article_path(@article) %>
 	<br>
 	<%= link_to "delete", article_path(@article), data: {confirm: "Really delete the article?"}, method: :delete %>
